# MapMarkerFramework

./: .gitignore  CMakeLists.txt  README.md
src/RE/: Offset.Ext.h
src/main/: ImportManager.cpp  Patch.cpp  SKSEPlugin.cpp
